# medusa2

./: README.md  mdzrc.example  requirements.txt  setup.cfg  test.sh  test_mdz.sh  test_repo.sh  test_storage.sh  test_val.sh
.github/workflows/: python-app.yml
examples/: manifest.xml
examples/derived/: manifest.xml
examples/flowcam/: file.csv  manifest.xml
examples/flowcam1/: 294-032502 st2 4 juni 2021 50 m halv.ctx  294-032502 st2 4 juni 2021 50 m halv.edg  294-032502 st2 4 juni 2021 50 m halv.lst  294-032502 st2 4 juni 2021 50 m halv_000001.tif  294-032502 st2 4 juni 2021 50 m halv_run_summary.txt  cal_image_000001.tif  data_export.csv  manifest.xml
mdz/: mdz  mdzd.py
medusa/: __init__.py  config.py  datasets.py  ledger.py  storage.py  template.py  util.py  validate.py
medusa/storage/: __init__.py  files.py  http.py  ipfs.py  sftp.py
medusa/xml/: manifest.rnc
tests/: test_mdz.sh  test_script.py
xml/: manifest.rnc  manifest.rng
