[metadata]
name = medusa
# version = attr: medusa.VERSION
version = 0.9.0
author = Ketil Malde
author_email = ketil@malde.org
description = A metdata-oriented distributed storage architecture
long_description = file: README.md
keywords = data management
license = LGPL
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Environment :: Console

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
scripts = mdz/mdz
install_requires =
   lxml
   rnc2rng
   sshkey_tools
   pysftp

[options.package_data]
medusa = xml/manifest.rnc

[flake8]
ignore = E302,E203,E305,E701,E501
